--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	⠄⠄⠄⠄⠄⠄⠄⠄⠄⠄s⠄h⠄i⠄e⠄y⠄⠄⠄⠄⠄⠄⠄⠄-->
 	<body class="container">
 		<header>
-			<a href="home.html"><p class="icon home-ico center" title="Ubiquidade Computacional"><i class="fas fa-home"></i></p></a>
+			<a href="https://thiagommab.github.io/home/"><p class="icon home-ico center" title="Ubiquidade Computacional"><i class="fas fa-home"></i></p></a>
 			<h1 class="titulo2">Ubiquidade Computacional</h1>
 		</header>
 		<main>
